# make

./: .editorconfig  README.md  lang.yaml  make.lua  makefile
android/: apkc.sh  cli.sh  gradle.sh  sdkmanager.sh  start.sh
bash/: bash.sh
c/: c.sh
c++/: start.sh
c++/cmake/: CMakeLists.txt  cmake.sh
c++/conan/: install.sh
c++/gcc/: gcc.sh
c++/make/: makefile
c++/make/main/: main.c  makefile  max.c  max.h  min.c  min.h
c++/make/template/basic/: makefile
c++/make/template/module/: makefile
c++/vcpkg/: vcpkg.sh
cmake/: cmake.md
erlang/: erlang.sh
java/: work.sh
java/gradle/: gradle.sh
java/maven/: mvn.sh
java/mill/: mill.sh
java/quarkus/: quarkus.sh
java/spring cli/: spring.sh
js/npm/: npm.sh
js/vite/: vite.sh
js/webpack/: Rollup.sh  esbuild.sh  webpack.sh
make/: makefile
make/var/: makefile
maven/: mvn.sh
python/pip/: pip.sh
python/uv/: uv.sh
scripts/: check.sh
sharp/: start.ps1  start.sh
vite/: vite.md
